# OPAQUE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  debug_verhoeff.py  pyproject.toml  test_opaque.py
assets/: README.md
benchmarks/: benchmark.py
docs/: API_REFERENCE.md  COMPLIANCE_GUIDE.md  INSTALLATION_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README_EN.md  README_ES.md  README_PT.md  TUTORIAL.md
examples/: advanced_callbacks.py  demo_advanced.py  example_01_basic.py  example_02_vault.py  example_03_honeytokens.py  example_04_crash_handler.py  example_05_audit.py  visual_tester.py
opaque/: __init__.py  algorithms.py  audit.py  callbacks.py  cli.py  core.py  crash_handler.py  middleware.py  utils.py  validators.py  vault.py
opaque/integrations/: __init__.py  loguru_integration.py  presidio_integration.py  pydantic_integration.py  sentry_integration.py  structlog_integration.py
src/: lib.rs
tests/: test_advanced.py  test_algorithms.py  test_callbacks.py  test_core.py  test_integrations.py  test_v1_1_1_features.py  test_v1_1_2_global.py  test_validators.py
