[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opaque-logger"
version = "0.1.0"
description = "Deterministic Data Masking Engine with Mathematical Validation - No AI Guessing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Samuel Silva", email = "samuelsilvass@github.com"}
]
keywords = ["security", "gdpr", "lgpd", "masking", "logging", "data-protection", "cpf", "cnpj", "pii", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/SamuelSilvass/OPAQUE"
Documentation = "https://github.com/SamuelSilvass/OPAQUE#readme"
Repository = "https://github.com/SamuelSilvass/OPAQUE"
Issues = "https://github.com/SamuelSilvass/OPAQUE/issues"

[project.scripts]
opaque = "opaque.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["opaque*"]
exclude = ["tests*", "examples*", "benchmarks*"]
