[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opaque-logger"
version = "1.1.2"
description = "ðŸ›¡ï¸ Enterprise Data Masking Engine - Custom Callbacks, LGPD/GDPR Compliance, 77+ Validators, Zero False Positives"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Samuel Silva", email = "ssanches011@gmail.com"}
]
keywords = [
    "security", "gdpr", "lgpd", "masking", "logging", "data-protection", 
    "cpf", "cnpj", "pii", "privacy", "validation", "encryption", "vault",
    "honeytokens", "south-america", "brazil", "argentina", "chile",
    "credit-card", "bitcoin", "ethereum", "aws", "github", "jwt",
    "devops", "devsecops", "compliance", "hipaa", "pci-dss"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English",
    "Natural Language :: Portuguese (Brazilian)",
    "Natural Language :: Spanish",
]
dependencies = [
    "cryptography>=41.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/SamuelSilvass/OPAQUE"
Documentation = "https://github.com/SamuelSilvass/OPAQUE#readme"
Repository = "https://github.com/SamuelSilvass/OPAQUE"
Issues = "https://github.com/SamuelSilvass/OPAQUE/issues"

[project.scripts]
opaque = "opaque.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["opaque*"]
exclude = ["tests*", "examples*", "benchmarks*"]
